--- a/todo.txt
+++ b/todo.txt
@@ -1,7 +1,7 @@
 
 Todo:
+	- check wp single compatibility - comments on teleogistic
 	- check bp groupblog compatibility
-	- check to make sure that bp_has_groups( user_id ) is filtering correctly; hnla reports that he can see all groups, even hidden ones
 	- opt out confirmation screen
 		- make text editable by admin
 	- reply-to address
@@ -24,6 +24,7 @@ Todo:
 		- toggle group link
 		- toggle group invitations: standard vs all members
 		- allow sitewide admins to edit footer text without making it editable by users
+		- Restrict email invitation based on group admin/mod/member
 	- email verification - email_exists. If found, give link to the profile (w friend link?)
 	- js for inline validation
 	- hook into member lists and searches with "not finding?" message
