--- a/todo.txt
+++ b/todo.txt
@@ -1,6 +1,6 @@
 
 Todo:
-	- bug from Deryk; bugs in IE and elsewhere on bp.org forums
+	- bugs in IE and elsewhere on bp.org forums
 	- http://buddypress.org/community/groups/cubepoints-buddypress-integration/forum/topic/suggested-intergration/ hooks
 	- disable certain parts when Groups component is disabled (also friends)
 	- check bp groupblog compatibility
