Updating todo.txt
git-svn-id: http://plugins.svn.wordpress.org/invite-anyone/trunk@242770 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/todo.txt
+++ b/todo.txt
@@ -1,5 +1,6 @@
 
 Todo:
+	- check slug replacement throughout
 	- check bp groupblog compatibility
 	- opt out confirmation screen
 		- make text editable by admin
